fix: delete useless

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,6 +14,7 @@
     "API strategy": "API strategy",
     "API test": "API test",
     "API version": "API version",
+    "Alarm": "Alarm",
     "Alibaba Cloud": "Alibaba Cloud",
     "All members of the organization can view": "all members of the current company can view",
     "App": "App",
@@ -35,17 +36,16 @@
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
-    "Cluster": "Cluster",
     "Code": "Code",
     "Config": "Config",
     "DB error": "DB error",
+    "Dashboard": "Dashboard",
     "Data source: API call management": "Data source: API call management",
     "December": "December",
     "Deploy": "Deploy",
     "Deployment not allowed in {env} in network block period.": "during the period of network closure, deployment is prohibited in the {env}!",
     "DingTalk": "DingTalk",
     "DingTalk address": "DingTalk address",
-    "Domain": "Domain",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
     "Enter the keyword query": "Enter the keyword query",
@@ -109,11 +109,13 @@
     "Qingdao": "Qingdao",
     "Quality": "Quality",
     "Release": "Release",
+    "Report": "Report",
     "Resource": "Resource",
     "SLA description": "SLA description",
     "SLA name": "SLA name",
     "SMS": "SMS",
     "September": "September",
+    "Service": "Service",
     "Setting": "Setting",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
@@ -291,6 +293,7 @@
     "cluster infos": "cluster infos",
     "cluster name": "cluster name",
     "cluster overview": "cluster overview",
+    "clusters": "clusters",
     "colour": "colour",
     "comment": "comment",
     "commit": "commit",
@@ -489,6 +492,7 @@
     "is it confirmed?": "is it confirmed?",
     "is it required": "is it required",
     "item {index} should be lowercase letters, numbers, dot, -, *": "item {index} should be lowercase letters, numbers, dot, -, *",
+    "job catalogue": "job catalogue",
     "join org": "join org",
     "join {orgName}": "join {orgName}",
     "joined apps": "joined apps",
@@ -657,6 +661,7 @@
     "preview": "preview",
     "private": "private",
     "privateKey": "privateKey",
+    "process detail": "process detail",
     "process initialization": "process initialization",
     "processing": "processing",
     "prod": "prod",
@@ -771,6 +776,7 @@
     "service name": "Service Name",
     "service position": "Service Position",
     "services": "services",
+    "services&tasks": "services&tasks",
     "set as {type}": "set as {type}",
     "set successfully": "set successfully",
     "set tags": "set tags",
