--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -173,6 +173,7 @@
     "alarm": "alarm",
     "alarm after recovery": "alarm after recovery",
     "alarm cluster": "alarm cluster",
+    "alarm data report": "alarm data report",
     "alarm information": "alarm information",
     "alarm name": "alarm name",
     "alarm rule": "alarm rule",
@@ -301,7 +302,6 @@
     "disk size": "disk size",
     "disk type": "disk type",
     "docker configs": "docker configs",
-    "domain manage": "domain manage",
     "domain name server": "domain name server",
     "domain name server address list": "domain name server address list",
     "doubled": "doubled",
@@ -618,6 +618,7 @@
     "switch network segment addition method": "switch network segment addition method",
     "system disk": "system disk",
     "system load": "system load",
+    "task list": "task list",
     "template sample": "template sample",
     "the CIDR block cannot be modified after it is set": "the CIDR block cannot be modified after it is set",
     "the same key already existed": "the same key already existed",
