--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -173,6 +173,7 @@
     "alarm": "告警",
     "alarm after recovery": "恢复后告警",
     "alarm cluster": "告警集群",
+    "alarm data report": "告警数据报表",
     "alarm information": "告警信息",
     "alarm name": "告警名称",
     "alarm rule": "告警规则",
@@ -301,7 +302,6 @@
     "disk size": "数据盘大小",
     "disk type": "数据盘类型",
     "docker configs": "docker configs",
-    "domain manage": "域名管理",
     "domain name server": "域名服务器",
     "domain name server address list": "域名服务器地址列表",
     "doubled": "翻倍",
@@ -618,6 +618,7 @@
     "switch network segment addition method": "交换机网段添加方式",
     "system disk": "系统盘",
     "system load": "系统负载",
+    "task list": "任务列表",
     "template sample": "模板样例",
     "the CIDR block cannot be modified after it is set": "一旦创建成功，网段不能修改。",
     "the same key already existed": "已存在相同key",
