--- a/locales/zh.json
+++ b/locales/zh.json
@@ -14,6 +14,7 @@
     "API strategy": "API 策略",
     "API test": "API 测试",
     "API version": "API 版本",
+    "Alarm": "告警",
     "Alibaba Cloud": "阿里云",
     "All members of the organization can view": "当前组织下所有成员都可以查看",
     "App": "应用",
@@ -35,17 +36,16 @@
     "Chengdu": "成都",
     "China": "中国",
     "Cloud management": "多云管理平台",
-    "Cluster": "集群",
     "Code": "代码",
     "Config": "配置",
     "DB error": "数据库错误",
+    "Dashboard": "大盘",
     "Data source: API call management": "数据来源：我的 API 申请调用管理",
     "December": "12月",
     "Deploy": "部署",
     "Deployment not allowed in {env} in network block period.": "组织处于封网期间，{env}禁止部署！",
     "DingTalk": "钉钉",
     "DingTalk address": "钉钉地址",
-    "Domain": "域名",
     "Dubai": "迪拜",
     "East China {num}": "华东{num}",
     "Enter the keyword query": "输入关键字查询",
@@ -109,11 +109,13 @@
     "Qingdao": "青岛",
     "Quality": "质量",
     "Release": "发布",
+    "Report": "报告",
     "Resource": "资源",
     "SLA description": "SLA 描述",
     "SLA name": "SLA 名称",
     "SMS": "短信",
     "September": "9月",
+    "Service": "服务",
     "Setting": "设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
@@ -291,6 +293,7 @@
     "cluster infos": "集群配置信息",
     "cluster name": "集群名称",
     "cluster overview": "集群总览",
+    "clusters": "集群",
     "colour": "着色",
     "comment": "评论",
     "commit": "提交",
@@ -489,6 +492,7 @@
     "is it confirmed?": "是否确认？",
     "is it required": "是否必填",
     "item {index} should be lowercase letters, numbers, dot, -, *": "第{index}项请输入小写字母、数字、-、*、.",
+    "job catalogue": "任务目录",
     "join org": "加入组织",
     "join {orgName}": "加入 {orgName}",
     "joined apps": "我的应用",
@@ -657,6 +661,7 @@
     "preview": "预览",
     "private": "私有",
     "privateKey": "私钥",
+    "process detail": "进程详情",
     "process initialization": "流程初始化",
     "processing": "进行中",
     "prod": "生产",
@@ -771,6 +776,7 @@
     "service name": "服务名称",
     "service position": "服务位置",
     "services": "服务目录",
+    "services&tasks": "服务&任务",
     "set as {type}": "设置为{type}",
     "set successfully": "设置成功",
     "set tags": "设置标签",
