--- a/locales/zh.json
+++ b/locales/zh.json
@@ -114,8 +114,11 @@
     "SLA description": "SLA 描述",
     "SLA name": "SLA 名称",
     "SMS": "短信",
+    "SMS Template": "短信模板",
+    "SMS signature": "短信签名",
     "September": "9月",
     "Service": "服务",
+    "Set up a notification channel to set a notification mode": "建立通知通道以设置通知模式",
     "Setting": "设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
@@ -123,6 +126,7 @@
     "Singapore": "新加坡",
     "South China": "华南{num}",
     "Southwest China {num}": "西南{num}",
+    "Submit the following information to the service provider to apply for an SMS template": "请按如下内容提交至服务商申请短信模板",
     "Supported Android package versions": "支持的 Android 包版本",
     "Supported iOS package versions": "支持的 iOS 包版本",
     "Sydney": "悉尼",
@@ -144,6 +148,7 @@
     "Welcome!": "欢迎！",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "待审批通过后, 您可以使用以下的 ClientID 和 ClientSecret 访问 API 实例。",
     "You do not have enough permissions": "您的权限不足",
+    "You have a notification message from the Erda platform": "你有一条来自 Erda 平台的通知消息",
     "You haven't joined current organization.": "您还未加入当前组织",
     "Zhangjiakou": "张家口",
     "abnormal": "异常",
@@ -205,6 +210,7 @@
     "approver": "审批人员",
     "archive": "归档",
     "archived": "已归档",
+    "are you sure you want to delete this item?": "您确定要删除此项目吗?",
     "are you sure?": "是否确认？",
     "artifact ID": "制品 ID",
     "artifact management": "制品管理",
@@ -261,6 +267,8 @@
     "cellphone": "手机号",
     "certificate": "证书",
     "change account permissions": "更改账号权限",
+    "channel name": "渠道名称",
+    "channel type": "渠道类型",
     "character set": "字符集",
     "check detail": "查看详情",
     "check log": "查看日志",
@@ -404,6 +412,7 @@
     "duration unit": "时长单位",
     "duration(month)": "时长(月）",
     "edit": "编辑",
+    "edit notification channel": "编辑通知渠道",
     "edit {name}": "编辑{name}",
     "edited successfully": "编辑成功",
     "enable": "启用",
@@ -566,6 +575,7 @@
     "name": "名称",
     "name or surname": "名称或者姓氏",
     "network": "网络",
+    "new notification channel": "新建通知渠道",
     "new password": "新密码",
     "nickname": "昵称",
     "no available version": "暂无可用版本",
@@ -580,8 +590,10 @@
     "not member": "非成员",
     "not started": "未启动",
     "notification": "通知",
+    "notification channel": "通知渠道",
     "notification method": "通知方式",
     "notification target": "通知对象",
+    "notify strategy information is missing, please complete!": "通知策略信息缺失，请填写!",
     "number": "数字",
     "number input": "数字输入框",
     "number of API": "接口个数",
@@ -647,6 +659,8 @@
     "please enter verification code": "请输入验证码",
     "please enter {name}": "请输入{name}",
     "please fill in the correct value": "请填写正确的值",
+    "please input": "请输入",
+    "please input channel name": "请输入渠道名称",
     "please input regexp": "请输入正则表达式",
     "please select": "请选择",
     "please select labels": "请选择标签",
@@ -775,6 +789,7 @@
     "service": "服务",
     "service name": "服务名称",
     "service position": "服务位置",
+    "service provider": "服务商",
     "services": "服务目录",
     "services&tasks": "服务&任务",
     "set as {type}": "设置为{type}",
@@ -839,6 +854,7 @@
     "the current request has no {name}": "当前请求无{name}",
     "the current version is deprecated": "当前版本已被弃用",
     "the length of {type} must not exceed {maxLength} characters": "{type} 的长度不得超过{maxLength}字符",
+    "the notification channel will be permanently deleted": "通知渠道将被永久删除",
     "the same {key} exists": "存在相同的{key}",
     "the two passwords you entered do not match": "您输入的两个密码不一致",
     "there can only be one automatically authorized SLA": "只能存在一个自动授权的SLA",
