--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -135,6 +135,8 @@
     "The total number of selected resources": "The total number of selected resources",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
+    "Trigger condition information is missing, please complete!": "Trigger condition information is missing, please complete!",
+    "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
@@ -146,6 +148,7 @@
     "Western United States": "Western United States",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
+    "abnormal machine": "abnormal machine",
     "absolute path for local data storage": "absolute path for local data storage",
     "absolute path of mount point": "absolute path of mount point",
     "absolute path starts with /": "absolute path starts with /",
@@ -154,6 +157,7 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "add Alibaba Cloud Container Service Cluster (Proprietary Version)",
     "add alibaba cloud machine": "add alibaba cloud machine",
     "add analysis rule": "add analysis rule",
+    "add cloud resources": "add cloud resources",
     "add cluster": "add cluster",
     "add existing resources to build a cluster": "add existing resources to build a cluster",
     "add external user": "add external user",
@@ -171,10 +175,9 @@
     "aggregator": "aggregator",
     "agile project": "agile project",
     "alarm": "alarm",
-    "alarm after recovery": "alarm after recovery",
-    "alarm cluster": "alarm cluster",
     "alarm data report": "alarm data report",
     "alarm information": "alarm information",
+    "alarm level": "alarm level",
     "alarm name": "alarm name",
     "alarm rule": "alarm rule",
     "alarm status": "alarm status",
@@ -186,7 +189,6 @@
     "allocate memory": "allocate memory",
     "allocation": "allocation",
     "allocation component node": "allocation component node",
-    "analysis result": "analysis result",
     "announcement content": "content",
     "announcement management": "announcement management",
     "application used": "application used",
@@ -221,6 +223,8 @@
     "block network": "block network",
     "built-in templates": "built-in templates",
     "built-in templates tip": "built-in templates tip",
+    "by fixed bandwidth": "by fixed bandwidth",
+    "by flow": "by flow",
     "can't be the same as the data path": "can't be the same as the data path",
     "cannot be the same as the exec path": "cannot be the same as the exec path",
     "cannot contain restricted keywords": "cannot contain restricted keywords",
@@ -274,8 +278,8 @@
     "create Group ID": "create Group ID",
     "create Token": "create Token",
     "create Topic": "create Topic",
-    "create analysis rule": "create analysis rule",
     "create announcement": "create announcement",
+    "create at least one notify strategy": "create at least one notify strategy",
     "create at least one rule": "create at least one rule",
     "create cluster": "create cluster",
     "create custom rule": "create custom rule",
@@ -313,7 +317,6 @@
     "eastern united states": "eastern united states",
     "ecs add trending": "ecs add trending",
     "ecs configuration": "ecs configuration",
-    "edit analysis rule": "edit analysis rule",
     "edit strategy": "edit strategy",
     "efficiency cloud": "efficiency cloud",
     "exec absolute path": "exec absolute path",
@@ -324,6 +327,7 @@
     "extensive domain": "extensive domain",
     "extract method": "extract method",
     "extract result": "extract result",
+    "field": "field",
     "field rule": "field rule",
     "field rule alias cannot be repeated": "field rule alias cannot be repeated",
     "field rule alias is required": "field rule alias is required",
@@ -353,8 +357,6 @@
     "if your instance will expire tomorrow, please choose manual renewal": "if your instance will expire tomorrow, please choose manual renewal",
     "image host": "image host",
     "import an existing Erda {type} cluster": "import an existing Erda {type} cluster",
-    "indicator extract": "indicator extract",
-    "indicator name": "indicator name",
     "initialization failed": "initialization failed",
     "initialize retry": "initialize retry",
     "input to search": "input to search",
@@ -379,6 +381,8 @@
     "load balancing configuration": "load balancing configuration",
     "log content": "log content",
     "log filter": "log filter",
+    "local ssd": "local ssd",
+    "machine": "machine",
     "machine IP": "machine IP",
     "machine IP list": "machine IP list",
     "machine alarm": "machine alarm",
@@ -438,6 +442,7 @@
     "notice published": "released",
     "notice status": "status",
     "notice unpublished": "unpublished",
+    "notify strategy": "notify strategy",
     "number": "number",
     "number of Bucket": "number of Bucket",
     "number of VSW": "number of VSW",
@@ -492,7 +497,6 @@
     "please enter bucket name": "please enter bucket name",
     "please enter the cluster name to confirm offline": "please enter the cluster name to confirm offline",
     "please enter the correct port": "please enter the correct port",
-    "please enter the log content first": "please enter the log content first",
     "please fill in the correct CIDR according to the prompt": "please fill in the correct CIDR according to the prompt",
     "please fill in the correct extensive domain": "please fill in the correct extensive domain",
     "please fill in the correct ip, separated by the enter key": "please fill in the correct ip, separated by the enter key",
@@ -504,11 +508,8 @@
     "please input correct IP": "please input correct IP",
     "please input dashboard description": "please input dashboard description",
     "please input dashboard name": "please input dashboard name",
-    "please input indicator name": "please input indicator name",
-    "please input log content": "please input log content",
     "please select a region first": "please select a region first",
     "please select cluster": "please select cluster",
-    "please select extract method": "please select extract method",
     "please select index group": "please select index group",
     "please select node type": "please select node type",
     "please select operation type": "please select operation type",
@@ -565,8 +566,6 @@
     "resource type": "resource type",
     "restart times": "restart times",
     "rule name": "rule name",
-    "rule test": "rule test",
-    "rule type": "rule type",
     "rule value cannot be empty": "rule value cannot be empty",
     "run cluster": "run cluster",
     "running cluster": "running cluster",
@@ -621,7 +620,6 @@
     "task list": "task list",
     "template sample": "template sample",
     "the CIDR block cannot be modified after it is set": "the CIDR block cannot be modified after it is set",
-    "the same key already existed": "the same key already existed",
     "the task will be permanently deleted": "the task will be permanently deleted",
     "tips": "tips",
     "topic management": "topic management",
@@ -629,6 +627,8 @@
     "total number of hosts": "total number of hosts",
     "total project resources": "total project resources",
     "total storage capacity": "total storage capacity",
+    "trigger conditions": "trigger conditions",
+    "trigger recover": "trigger recover",
     "trigger rules": "trigger rules",
     "type template": "type template",
     "unauthorized account (default)": "unauthorized account (default)",
@@ -1666,7 +1666,6 @@
     "select status": "select status",
     "self-test situation": "self-test situation",
     "serious": "serious",
-    "service architecture": "service architecture",
     "service deployment": "service deployment",
     "service instance name is repeated": "service instance name is repeated",
     "serviceMesh": "serviceMesh",
@@ -1950,6 +1949,7 @@
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
     "alarm history": "alarm history",
+    "alert": "alert",
     "all": "all",
     "all methods": "all methods",
     "allow access": "allow access",
@@ -2011,6 +2011,7 @@
     "blacklist": "blacklist",
     "blocking resource loading time": "blocking resource loading time",
     "branch call control": "branch call control",
+    "breakdown": "breakdown",
     "browse context": "browse context",
     "browse performance": "browse performance",
     "browser": "browser",
@@ -2110,6 +2111,7 @@
     "duration desc": "duration desc",
     "earlier": "earlier",
     "edit a endpoint": "edit a endpoint",
+    "emergency": "emergency",
     "enable daily report": "enable daily report",
     "enable rule": "enable rule",
     "enable weekly report": "enable weekly report",
@@ -2124,6 +2126,8 @@
     "entry domain name passthrough": "entry domain name passthrough",
     "environment entrance": "environment entrance",
     "environments": "environments",
+    "equal": "equal",
+    "error": "error",
     "error analysis": "error analysis",
     "error code": "error code",
     "error code and error ratio should be set at the same time": "error code and error ratio should be set at the same time",
@@ -2163,7 +2167,6 @@
     "filter by path name": "filter by path name",
     "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
-    "filter content": "filter content",
     "find the authorization interface": "find the authorization interface",
     "first paint time": "first paint time",
     "first trigger": "first trigger",
@@ -2187,7 +2190,6 @@
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
-    "highlight": "highlight",
     "historical downtime": "historical downtime",
     "history available time": "history available time",
     "hot spot analysis": "hot spot analysis",
@@ -2222,10 +2224,10 @@
     "latency": "latency",
     "later": "later",
     "latest news": "latest news",
+    "light": "light",
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
-    "live tail": "live tail",
     "load event": "load event",
     "location analysis": "location analysis",
     "location block configuration": "location block configuration",
@@ -2234,6 +2236,7 @@
     "lowercase letters, numbers, dot, -, *": "lowercase letters, numbers, dot, -, *",
     "mail recipient": "Mail recipient",
     "manual registration": "manual registration",
+    "match": "match",
     "match the URL path prefix, and remove the prefix": "match the URL path prefix, and remove the prefix",
     "max time-consuming(ms)": "max time-consuming(ms)",
     "maximum concurrency": "maximum concurrency",
@@ -2269,6 +2272,8 @@
     "node traffic management": "node traffic management",
     "normal": "normal",
     "not activated": "not activated",
+    "not equal": "not equal",
+    "not match": "not match",
     "not satisfied": "not satisfied",
     "notification group management": "notification group management",
     "number of connection": "number of connection",
@@ -2474,8 +2479,6 @@
     "transmission analysis": "transmission analysis",
     "transmission traffic": "transmission traffic",
     "transport bytes(KBytes)": "transport bytes(KBytes)",
-    "type filter string, press the Enter key": "type filter string, press the Enter key",
-    "type highlight string, press the Enter key": "type highlight string, press the Enter key",
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
