--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -135,6 +135,8 @@
     "The total number of selected resources": "筛选项资源总和",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
+    "Trigger condition information is missing, please complete!": "触发条件信息缺失，请补全!",
+    "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
@@ -146,6 +148,7 @@
     "Western United States": "美国西部",
     "Workload": "工作负载",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "您可以将链接分享至QQ、微信、钉钉等工作群，同事们通过此链接即可加入组织",
+    "abnormal machine": "__NOT_TRANSLATED__",
     "absolute path for local data storage": "本地数据存储绝对路径",
     "absolute path of mount point": "挂载点绝对路径",
     "absolute path starts with /": "绝对路径以 / 开头",
@@ -154,6 +157,7 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "添加阿里云容器服务集群（专有版）",
     "add alibaba cloud machine": "添加阿里云主机",
     "add analysis rule": "添加分析规则",
+    "add cloud resources": "添加云资源",
     "add cluster": "添加集群",
     "add existing resources to build a cluster": "添加已有资源自建集群",
     "add external user": "添加外部用户",
@@ -171,10 +175,9 @@
     "aggregator": "聚合",
     "agile project": "敏捷项目",
     "alarm": "告警",
-    "alarm after recovery": "恢复后告警",
-    "alarm cluster": "告警集群",
     "alarm data report": "告警数据报表",
     "alarm information": "告警信息",
+    "alarm level": "告警级别",
     "alarm name": "告警名称",
     "alarm rule": "告警规则",
     "alarm status": "告警状态",
@@ -186,7 +189,6 @@
     "allocate memory": "分配内存",
     "allocation": "分配量",
     "allocation component node": "分配组件节点",
-    "analysis result": "分析结果",
     "announcement content": "公告内容",
     "announcement management": "公告管理",
     "application used": "应用已使用",
@@ -221,6 +223,8 @@
     "block network": "封网",
     "built-in templates": "内置模板",
     "built-in templates tip": "可以套用内置模板来快速编辑分析规则",
+    "by fixed bandwidth": "按固定带宽",
+    "by flow": "按流量",
     "can't be the same as the data path": "不能和数据路径一致",
     "cannot be the same as the exec path": "不能和exec路径一样",
     "cannot contain restricted keywords": "不能包含限制关键字",
@@ -274,8 +278,8 @@
     "create Group ID": "创建 Group ID",
     "create Token": "创建Token",
     "create Topic": "创建 Topic",
-    "create analysis rule": "创建分析规则",
     "create announcement": "新建公告",
+    "create at least one notify strategy": "至少创建一个通知策略",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
     "create custom rule": "创建自定义规则",
@@ -313,7 +317,6 @@
     "eastern united states": "美国东部",
     "ecs add trending": "云主机添加趋势",
     "ecs configuration": "云主机配置",
-    "edit analysis rule": "编辑分析规则",
     "edit strategy": "编辑策略",
     "efficiency cloud": "高效云盘",
     "exec absolute path": "exec绝对路径",
@@ -324,6 +327,7 @@
     "extensive domain": "泛域名",
     "extract method": "提取方式",
     "extract result": "提取结果",
+    "field": "字段",
     "field rule": "字段规则",
     "field rule alias cannot be repeated": "字段规则别名不能重复",
     "field rule alias is required": "字段规则别名必填",
@@ -353,8 +357,6 @@
     "if your instance will expire tomorrow, please choose manual renewal": "如您的实例将于明天到期，请选择手工续费。",
     "image host": "镜像仓库主机地址",
     "import an existing Erda {type} cluster": "导入已创建的Erda {type}集群",
-    "indicator extract": "指标提取",
-    "indicator name": "指标名称",
     "initialization failed": "初始化失败",
     "initialize retry": "初始化重试",
     "input to search": "可输入形如“host:10.168.0.1”格式进行查询",
@@ -377,8 +379,10 @@
     "letters and numbers, separated by hyphens, cannot be modified if confirmed": "字母数字，中间以中横线分隔，确定后无法修改",
     "library reference": "库引用",
     "load balancing configuration": "负载均衡配置",
+    "local ssd": "本地SSD",
     "log content": "日志内容",
     "log filter": "日志筛选",
+    "machine": "机器",
     "machine IP": "机器IP",
     "machine IP list": "机器IP列表",
     "machine alarm": "机器告警",
@@ -438,6 +442,7 @@
     "notice published": "已发布",
     "notice status": "状态",
     "notice unpublished": "未发布",
+    "notify strategy": "通知策略",
     "number": "数量",
     "number of Bucket": "Bucket数",
     "number of VSW": "交换机数量",
@@ -492,7 +497,6 @@
     "please enter bucket name": "请输入bucket名称",
     "please enter the cluster name to confirm offline": "请输入集群名确认下线",
     "please enter the correct port": "请输入正确的端口",
-    "please enter the log content first": "请先输入日志内容",
     "please fill in the correct CIDR according to the prompt": "请根据提示填写正确网段",
     "please fill in the correct extensive domain": "请填写正确泛域名",
     "please fill in the correct ip, separated by the enter key": "请填写正确IP,以回车键分隔",
@@ -504,11 +508,8 @@
     "please input correct IP": "请填写正确ip",
     "please input dashboard description": "请输入大盘描述",
     "please input dashboard name": "请输入大盘名称",
-    "please input indicator name": "请输入指标名称",
-    "please input log content": "请输入日志内容",
     "please select a region first": "请先选择一个区域",
     "please select cluster": "请选择集群",
-    "please select extract method": "请选择提取方式",
     "please select index group": "请选择指标分组",
     "please select node type": "请选择节点类型",
     "please select operation type": "请选择操作类型",
@@ -565,8 +566,6 @@
     "resource type": "资源类型",
     "restart times": "重启次数",
     "rule name": "规则名称",
-    "rule test": "规则测试",
-    "rule type": "规则类型",
     "rule value cannot be empty": "规则的值不能为空",
     "run cluster": "运行集群",
     "running cluster": "运行集群",
@@ -621,7 +620,6 @@
     "task list": "任务列表",
     "template sample": "模板样例",
     "the CIDR block cannot be modified after it is set": "一旦创建成功，网段不能修改。",
-    "the same key already existed": "已存在相同key",
     "the task will be permanently deleted": "任务将被删除",
     "tips": "温馨提示",
     "topic management": "Topic 管理",
@@ -629,6 +627,8 @@
     "total number of hosts": "总主机数",
     "total project resources": "项目总资源",
     "total storage capacity": "总存储容量",
+    "trigger conditions": "触发条件",
+    "trigger recover": "触发恢复",
     "trigger rules": "触发规则定义",
     "type template": "类型模板",
     "unauthorized account (default)": "未授权账号（默认）",
@@ -1666,7 +1666,6 @@
     "select status": "选择状态",
     "self-test situation": "自测情况",
     "serious": "严重",
-    "service architecture": "服务架构",
     "service deployment": "服务部署",
     "service instance name is repeated": "服务实例名称重复",
     "serviceMesh": "服务网格",
@@ -1950,6 +1949,7 @@
     "ajax interface": "Ajax接口",
     "ajax performance trends": "Ajax性能趋势",
     "alarm history": "告警历史",
+    "alert": "警报",
     "all": "全部",
     "all methods": "全部方法",
     "allow access": "允许访问",
@@ -2011,6 +2011,7 @@
     "blacklist": "黑名单",
     "blocking resource loading time": "阻塞资源加载耗时",
     "branch call control": "分支流量管控",
+    "breakdown": "故障",
     "browse context": "浏览上下文",
     "browse performance": "浏览性能",
     "browser": "浏览器",
@@ -2110,6 +2111,7 @@
     "duration desc": "耗时降序",
     "earlier": "更早",
     "edit a endpoint": "编辑流量入口",
+    "emergency": "紧急",
     "enable daily report": "开启日报",
     "enable rule": "开启规则",
     "enable weekly report": "开启周报",
@@ -2124,6 +2126,8 @@
     "entry domain name passthrough": "入口域名透传",
     "environment entrance": "环境入口",
     "environments": "环境",
+    "equal": "等于",
+    "error": "错误",
     "error analysis": "错误分析",
     "error code": "错误码",
     "error code and error ratio should be set at the same time": "错误码和错误比例需同时设置",
@@ -2163,7 +2167,6 @@
     "filter by path name": "输入路径名称过滤",
     "filter by registration type": "按注册类型过滤",
     "filter by service": "按服务过滤",
-    "filter content": "过滤内容",
     "find the authorization interface": "查找需授权接口",
     "first paint time": "白屏耗时",
     "first trigger": "第一次触发",
@@ -2187,7 +2190,6 @@
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
-    "highlight": "高亮显示",
     "historical downtime": "历史宕机时间",
     "history available time": "历史可用时间",
     "hot spot analysis": "热点分析",
@@ -2222,10 +2224,10 @@
     "latency": "延时",
     "later": "更新",
     "latest news": "最新动态",
+    "light": "轻微",
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
     "link information": "链路信息",
-    "live tail": "实时 tail",
     "load event": "load事件",
     "location analysis": "定位分析",
     "location block configuration": "location block的配置",
@@ -2234,6 +2236,7 @@
     "lowercase letters, numbers, dot, -, *": "小写字母、数字、-、*、.",
     "mail recipient": "邮件接收人",
     "manual registration": "手动注册",
+    "match": "匹配",
     "match the URL path prefix, and remove the prefix": "匹配到URL路径前缀，同时移除前缀",
     "max time-consuming(ms)": "最大耗时(ms)",
     "maximum concurrency": "最大并发",
@@ -2269,6 +2272,8 @@
     "node traffic management": "节点流量管理",
     "normal": "正常",
     "not activated": "未启用",
+    "not equal": "不等于",
+    "not match": "不匹配",
     "not satisfied": "不满意",
     "notification group management": "通知组管理",
     "number of connection": "连接数",
@@ -2474,8 +2479,6 @@
     "transmission analysis": "传输分析",
     "transmission traffic": "传输流量",
     "transport bytes(KBytes)": "传输字节(KBytes)",
-    "type filter string, press the Enter key": "输入过滤字符串，回车确认",
-    "type highlight string, press the Enter key": "输入高亮字符串，回车确认",
     "uniform domain name entry": "统一域名入口",
     "update configuration": "更新配置",
     "update period": "更新周期",
