feat: update accessKeysecret to password

--- a/locales/en.json
+++ b/locales/en.json
@@ -661,6 +661,8 @@
     "please fill in the correct value": "please fill in the correct value",
     "please input": "please input",
     "please input channel name": "please input channel name",
+    "please input SMS Template": "please input SMS Template",
+    "please input SMS signature": "please input SMS signature",
     "please input regexp": "please input regexp",
     "please select": "please select",
     "please select labels": "please select labels",
