--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -684,6 +684,7 @@
     "batch authorize application": "批量授权应用",
     "batch set the role of member": "批量设置成员角色",
     "can not be all spaces": "不能全为空格",
+    "cannot contain spaces": "不能含有空格",
     "cancel copy": "取消复制",
     "cancel cut": "取消剪切",
     "change setting": "修改配置",
@@ -1949,7 +1950,7 @@
     "ajax interface": "Ajax接口",
     "ajax performance trends": "Ajax性能趋势",
     "alarm history": "告警历史",
-    "alert": "警报",
+    "alert": "警告",
     "all": "全部",
     "all methods": "全部方法",
     "allow access": "允许访问",
