feat: udpdate i18n content

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -114,7 +114,7 @@
     "SLA description": "SLA 描述",
     "SLA name": "SLA 名称",
     "SMS": "短信",
-    "SMS Template": "短信模板",
+    "SMS Template Code": "短信模板 Code",
     "SMS signature": "短信签名",
     "September": "9月",
     "Service": "服务",
@@ -658,12 +658,13 @@
     "please enter the correct format": "请输入正确格式",
     "please enter verification code": "请输入验证码",
     "please enter {name}": "请输入{name}",
+    "please deal with it promptly": "请及时处理",
     "please fill in the correct value": "请填写正确的值",
     "please input": "请输入",
     "please input channel name": "请输入渠道名称",
-    "please input SMS Template": "请输入短信模板",
-    "please input SMS signature": "请输入短信签名",
     "please input regexp": "请输入正则表达式",
+    "please input the SMS Template Code you have applied for on the service provider platform": "请输入在服务商平台申请的短信模板 Code",
+    "please input the SMS signature you have applied for on the service provider platform": "请输入在服务商平台申请的短信签名",
     "please select": "请选择",
     "please select labels": "请选择标签",
     "please select role for member": "请选择成员角色",
