--- a/locales/en.json
+++ b/locales/en.json
@@ -114,7 +114,7 @@
     "SLA description": "SLA description",
     "SLA name": "SLA name",
     "SMS": "SMS",
-    "SMS Template": "SMS Template",
+    "SMS Template Code": "SMS Template Code",
     "SMS signature": "SMS signature",
     "September": "September",
     "Service": "Service",
@@ -658,12 +658,13 @@
     "please enter the correct format": "please enter the correct format",
     "please enter verification code": "please enter verification code",
     "please enter {name}": "please enter {name}",
+    "please deal with it promptly": "please deal with it promptly",
     "please fill in the correct value": "please fill in the correct value",
     "please input": "please input",
     "please input channel name": "please input channel name",
-    "please input SMS Template": "please input SMS Template",
-    "please input SMS signature": "please input SMS signature",
     "please input regexp": "please input regexp",
+    "please input the SMS signature you have applied for on the service provider platform": "please input the SMS signature you have applied for on the service provider platform",
+    "please input the SMS Template Code you have applied for on the service provider platform": "please input the SMS Template Code you have applied for on the service provider platform",
     "please select": "please select",
     "please select labels": "please select labels",
     "please select role for member": "please select role for member",
