refactor: refactor code

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -148,7 +148,6 @@
     "Western United States": "美国西部",
     "Workload": "工作负载",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "您可以将链接分享至QQ、微信、钉钉等工作群，同事们通过此链接即可加入组织",
-    "abnormal machine": "__NOT_TRANSLATED__",
     "absolute path for local data storage": "本地数据存储绝对路径",
     "absolute path of mount point": "挂载点绝对路径",
     "absolute path starts with /": "绝对路径以 / 开头",
@@ -175,6 +174,8 @@
     "aggregator": "聚合",
     "agile project": "敏捷项目",
     "alarm": "告警",
+    "alarm after recovery": "恢复后告警",
+    "alarm cluster": "告警集群",
     "alarm data report": "告警数据报表",
     "alarm information": "告警信息",
     "alarm level": "告警级别",
@@ -189,6 +190,7 @@
     "allocate memory": "分配内存",
     "allocation": "分配量",
     "allocation component node": "分配组件节点",
+    "analysis result": "分析结果",
     "announcement content": "公告内容",
     "announcement management": "公告管理",
     "application used": "应用已使用",
@@ -278,6 +280,7 @@
     "create Group ID": "创建 Group ID",
     "create Token": "创建Token",
     "create Topic": "创建 Topic",
+    "create analysis rule": "创建分析规则",
     "create announcement": "新建公告",
     "create at least one notify strategy": "至少创建一个通知策略",
     "create at least one rule": "至少创建一条规则",
@@ -317,6 +320,7 @@
     "eastern united states": "美国东部",
     "ecs add trending": "云主机添加趋势",
     "ecs configuration": "云主机配置",
+    "edit analysis rule": "编辑分析规则",
     "edit strategy": "编辑策略",
     "efficiency cloud": "高效云盘",
     "exec absolute path": "exec绝对路径",
@@ -357,6 +361,8 @@
     "if your instance will expire tomorrow, please choose manual renewal": "如您的实例将于明天到期，请选择手工续费。",
     "image host": "镜像仓库主机地址",
     "import an existing Erda {type} cluster": "导入已创建的Erda {type}集群",
+    "indicator extract": "指标提取",
+    "indicator name": "指标名称",
     "initialization failed": "初始化失败",
     "initialize retry": "初始化重试",
     "input to search": "可输入形如“host:10.168.0.1”格式进行查询",
@@ -497,6 +503,7 @@
     "please enter bucket name": "请输入bucket名称",
     "please enter the cluster name to confirm offline": "请输入集群名确认下线",
     "please enter the correct port": "请输入正确的端口",
+    "please enter the log content first": "请先输入日志内容",
     "please fill in the correct CIDR according to the prompt": "请根据提示填写正确网段",
     "please fill in the correct extensive domain": "请填写正确泛域名",
     "please fill in the correct ip, separated by the enter key": "请填写正确IP,以回车键分隔",
@@ -508,12 +515,16 @@
     "please input correct IP": "请填写正确ip",
     "please input dashboard description": "请输入大盘描述",
     "please input dashboard name": "请输入大盘名称",
+    "please input indicator name": "请输入指标名称",
+    "please input log content": "请输入日志内容",
     "please select a region first": "请先选择一个区域",
     "please select cluster": "请选择集群",
+    "please select extract method": "请选择提取方式",
     "please select index group": "请选择指标分组",
     "please select node type": "请选择节点类型",
     "please select operation type": "请选择操作类型",
     "please select specifications": "请选择规格",
+    "please select the corresponding value": "请输入对应值",
     "please select the label": "请选择标签",
     "please use the following command to get the Secret information corresponding to the Service Account": "请使用如下命令得到 Service Account 对应的 Secret 信息",
     "pod detail": "Pod 详情",
@@ -566,6 +577,8 @@
     "resource type": "资源类型",
     "restart times": "重启次数",
     "rule name": "规则名称",
+    "rule test": "规则测试",
+    "rule type": "规则类型",
     "rule value cannot be empty": "规则的值不能为空",
     "run cluster": "运行集群",
     "running cluster": "运行集群",
@@ -620,6 +633,7 @@
     "task list": "任务列表",
     "template sample": "模板样例",
     "the CIDR block cannot be modified after it is set": "一旦创建成功，网段不能修改。",
+    "the same key already existed": "已存在相同key",
     "the task will be permanently deleted": "任务将被删除",
     "tips": "温馨提示",
     "topic management": "Topic 管理",
@@ -1667,6 +1681,7 @@
     "select status": "选择状态",
     "self-test situation": "自测情况",
     "serious": "严重",
+    "service architecture": "服务架构",
     "service deployment": "服务部署",
     "service instance name is repeated": "服务实例名称重复",
     "serviceMesh": "服务网格",
@@ -2168,6 +2183,7 @@
     "filter by path name": "输入路径名称过滤",
     "filter by registration type": "按注册类型过滤",
     "filter by service": "按服务过滤",
+    "filter content": "过滤内容",
     "find the authorization interface": "查找需授权接口",
     "first paint time": "白屏耗时",
     "first trigger": "第一次触发",
@@ -2191,6 +2207,7 @@
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
+    "highlight": "高亮显示",
     "historical downtime": "历史宕机时间",
     "history available time": "历史可用时间",
     "hot spot analysis": "热点分析",
@@ -2229,6 +2246,7 @@
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
     "link information": "链路信息",
+    "live tail": "实时 tail",
     "load event": "load事件",
     "location analysis": "定位分析",
     "location block configuration": "location block的配置",
@@ -2480,6 +2498,8 @@
     "transmission analysis": "传输分析",
     "transmission traffic": "传输流量",
     "transport bytes(KBytes)": "传输字节(KBytes)",
+    "type filter string, press the Enter key": "输入过滤字符串，回车确认",
+    "type highlight string, press the Enter key": "输入高亮字符串，回车确认",
     "uniform domain name entry": "统一域名入口",
     "update configuration": "更新配置",
     "update period": "更新周期",
