--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -175,6 +175,8 @@
     "aggregator": "aggregator",
     "agile project": "agile project",
     "alarm": "alarm",
+    "alarm after recovery": "alarm after recovery",
+    "alarm cluster": "alarm cluster",
     "alarm data report": "alarm data report",
     "alarm information": "alarm information",
     "alarm level": "alarm level",
@@ -189,6 +191,7 @@
     "allocate memory": "allocate memory",
     "allocation": "allocation",
     "allocation component node": "allocation component node",
+    "analysis result": "analysis result",
     "announcement content": "content",
     "announcement management": "announcement management",
     "application used": "application used",
@@ -278,6 +281,7 @@
     "create Group ID": "create Group ID",
     "create Token": "create Token",
     "create Topic": "create Topic",
+    "create analysis rule": "create analysis rule",
     "create announcement": "create announcement",
     "create at least one notify strategy": "create at least one notify strategy",
     "create at least one rule": "create at least one rule",
@@ -317,6 +321,7 @@
     "eastern united states": "eastern united states",
     "ecs add trending": "ecs add trending",
     "ecs configuration": "ecs configuration",
+    "edit analysis rule": "edit analysis rule",
     "edit strategy": "edit strategy",
     "efficiency cloud": "efficiency cloud",
     "exec absolute path": "exec absolute path",
@@ -357,6 +362,8 @@
     "if your instance will expire tomorrow, please choose manual renewal": "if your instance will expire tomorrow, please choose manual renewal",
     "image host": "image host",
     "import an existing Erda {type} cluster": "import an existing Erda {type} cluster",
+    "indicator extract": "indicator extract",
+    "indicator name": "indicator name",
     "initialization failed": "initialization failed",
     "initialize retry": "initialize retry",
     "input to search": "input to search",
@@ -497,6 +504,7 @@
     "please enter bucket name": "please enter bucket name",
     "please enter the cluster name to confirm offline": "please enter the cluster name to confirm offline",
     "please enter the correct port": "please enter the correct port",
+    "please enter the log content first": "please enter the log content first",
     "please fill in the correct CIDR according to the prompt": "please fill in the correct CIDR according to the prompt",
     "please fill in the correct extensive domain": "please fill in the correct extensive domain",
     "please fill in the correct ip, separated by the enter key": "please fill in the correct ip, separated by the enter key",
@@ -508,12 +516,16 @@
     "please input correct IP": "please input correct IP",
     "please input dashboard description": "please input dashboard description",
     "please input dashboard name": "please input dashboard name",
+    "please input indicator name": "please input indicator name",
+    "please input log content": "please input log content",
     "please select a region first": "please select a region first",
     "please select cluster": "please select cluster",
+    "please select extract method": "please select extract method",
     "please select index group": "please select index group",
     "please select node type": "please select node type",
     "please select operation type": "please select operation type",
     "please select specifications": "please select specifications",
+    "please select the corresponding value": "please select the corresponding value",
     "please select the label": "please select the label",
     "please use the following command to get the Secret information corresponding to the Service Account": "please use the following command to get the Secret information corresponding to the Service Account",
     "pod detail": "Pod detail",
@@ -566,6 +578,8 @@
     "resource type": "resource type",
     "restart times": "restart times",
     "rule name": "rule name",
+    "rule test": "rule test",
+    "rule type": "rule type",
     "rule value cannot be empty": "rule value cannot be empty",
     "run cluster": "run cluster",
     "running cluster": "running cluster",
@@ -620,6 +634,7 @@
     "task list": "task list",
     "template sample": "template sample",
     "the CIDR block cannot be modified after it is set": "the CIDR block cannot be modified after it is set",
+    "the same key already existed": "the same key already existed",
     "the task will be permanently deleted": "the task will be permanently deleted",
     "tips": "tips",
     "topic management": "topic management",
@@ -1667,6 +1682,7 @@
     "select status": "select status",
     "self-test situation": "self-test situation",
     "serious": "serious",
+    "service architecture": "service architecture",
     "service deployment": "service deployment",
     "service instance name is repeated": "service instance name is repeated",
     "serviceMesh": "serviceMesh",
@@ -2168,6 +2184,7 @@
     "filter by path name": "filter by path name",
     "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
+    "filter content": "filter content",
     "find the authorization interface": "find the authorization interface",
     "first paint time": "first paint time",
     "first trigger": "first trigger",
@@ -2191,6 +2208,7 @@
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
+    "highlight": "highlight",
     "historical downtime": "historical downtime",
     "history available time": "history available time",
     "hot spot analysis": "hot spot analysis",
@@ -2229,6 +2247,7 @@
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
+    "live tail": "live tail",
     "load event": "load event",
     "location analysis": "location analysis",
     "location block configuration": "location block configuration",
@@ -2480,6 +2499,8 @@
     "transmission analysis": "transmission analysis",
     "transmission traffic": "transmission traffic",
     "transport bytes(KBytes)": "transport bytes(KBytes)",
+    "type filter string, press the Enter key": "type filter string, press the Enter key",
+    "type highlight string, press the Enter key": "type highlight string, press the Enter key",
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
